# data-lifeboat-converter

./: .gitignore  CLAUDE.md  LICENSE  README.md  lifeboat_to_hf.py  lifeboat_to_hf_dataset.py  pyproject.toml  test_compatibility.py  test_static_space.py
templates/: Dockerfile.dynamic.template  Dockerfile.template  dataset_card.md.template  download_and_serve.py.template  index.html.template  raw_dataset_card.md.template  redirect_index.html  space_readme.md.template  space_readme.template
